# driftax

./: README.md  pyproject.toml
examples/: README.md  mnist_train.py  ring_train.py  run_checkerboard.sh  run_drift_quiver.sh  run_mnist.sh  run_ring.sh  run_swissroll.sh  run_toy2d.sh  toy2d_train_mlp.py  toy_examples.ipynb  visualize_drift.py
notebooks/: README.md  conditional_1d_inverse_dit.ipynb  mnist_drifting_dit.ipynb  toy_drifting_original.ipynb
src/driftax/: __init__.py  ckpt.py  conditioning.py  datasets.py  dit1d.py  dit_latent2d.py  drift.py  feature_encoders.py  models.py  train_toy.py  visualize_drift.py
src/driftax.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_compute_drift_shapes.py  test_smoke.py
